# createyourstory.ai

./: .gitignore  LICENSE  README.md  build.sh
backend/: .env.example  main.py  pyproject.toml
backend/core/: config.py  image_generator.py  models.py  prompts.py  story_generator.py
backend/db/: database.py
backend/exceptions/: exceptions.py
backend/models/: auth.py  job.py  story.py
backend/routers/: auth.py  job.py  story.py
backend/schemas/: job.py  story.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  auth.ts  index.css  main.tsx  theme.ts  types.ts
frontend/src/components/: CreateStoryForm.tsx  ErrorAlert.tsx  HomeLayout.tsx  ImageLoader.tsx  LoadingStatus.tsx  LoginPage.tsx  SignupPage.tsx  StoryGame.tsx  StoryGenerator.tsx  StoryList.tsx  StoryListItem.tsx  StoryLoader.tsx  ThemeInput.tsx
