[project]
name = "CreateYourStory.ai-Backend"
version = "0.1.0"
description = "RESTful backend built with FastAPI and SQLModel."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.138.0",
    "langchain>=1.3.10",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]
