[project]
name = "CreateYourStory.ai-Backend"
version = "0.1.0"
description = "RESTful backend built with FastAPI and SQLModel."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all,standard]>=0.138.0",
    "langchain>=1.3.10",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.2",
    "langchain-openrouter>=0.2.6",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]

[tool.fastapi]
entrypoint = "main:app"
